# conan-grpc

./: .gitignore  .travis.yml  001-fix-mingw-linking.patch  CMakeLists.txt  LICENSE  LICENSE.md  Readme.md  appveyor.yml  build.py  conandata.yml  conanfile.py  conanfile_base.py  conanfile_installer.py  grpc.patch
.ci/: install.sh
.github/workflows/: conan.yml  mingw.yml
.travis/: install.sh
patches/: upstream-pr-24959-only-openssl-engine-when-supported.patch
test_package/: CMakeLists.txt  conanfile.py  greeter_client.cc  helloworld.proto
test_package_installer/: CMakeLists.txt  conanfile.py
